testsuite/tests/properties/invalid_external/invalid_abstract.lkt
import common

@abstract class AbstractExample: FooNode {
    @export @external() @abstract fun p(): Bool
}

class Example: AbstractExample {
    fun p(): Bool = false
}
